# digical

./: README.md  setup.cfg
digical/: __init__.py
digical/lib/: __init__.py  schedule.py  schedule_test.py  time.py  time_test.py  timerange.py  timerange_test.py
examples/: calendar.py
