[metadata]
name = digical
version = attr: digical.__version__
description = digical
long_description = file: README.md
long_description_content_type = text/markdown
author = Natalie Fearnley
author_email = nfearnley@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = calendar
project_urls =
    Source=https://github.com/nfearnley/digical
    Tracker=https://github.com/nfearnley/digical/issues

[options]
packages = find:
python_requires = >=3.8
zip_safe = yes
include_package_data = True

[options.extras_require]
dev =
    pytest==6.2.2
    flake8==3.8.4
    autopep8==1.5.5

[flake8]
ignore = E501,W503
per-file-ignores =
    */__init__.py:F401
